<resources>
    <string name="error_network_title">"Network error"</string>
    <string name="error_network_text">"Please check your Internet connection."</string>
    <string name="error_action_retry">"Try again"</string>
    <string name="error_camera_permission_title">"No access to camera"</string>
    <string name="error_camera_permission_text">"The app requires access to the camera to scan the certificate."</string>
    <string name="error_action_change_settings">"Change settings"</string>
    <string name="error_title">"Error"</string>
    <string name="qr_scanner_error">"No valid QR code"</string>
    <string name="ok_button">"OK"</string>
    <string name="camera_permission_dialog_text">"The app requires access to the camera to scan the QR code."</string>
    <string name="camera_permission_dialog_action">"Allow access to camera"</string>
    <string name="covid_certificate_title">"EU-compliant certificates"</string>
    <string name="wallet_add_certificate">"Add"</string>
    <string name="wallet_add_certificate_success_message">"Certificate added successfully"</string>
    <string name="wallet_certificate">"EU-compliant certificate"</string>
    <string name="wallet_certificate_loaded">"EU-compliant certificate, page"</string>
    <string name="wallet_homescreen_explanation">"Scan the EU-compliant QR code on the certificate to add it to the app."</string>
    <string name="wallet_scanner_title">"Add"</string>
    <string name="wallet_scanner_title_loaded">"Add, page"</string>
    <string name="wallet_verify_success_title">"Check completed successfully"</string>
    <string name="wallet_verify_success_info">"Only valid in combination with an official photo ID"</string>
    <string name="wallet_scanner_explanation">"Scan the EU-compliant QR code on the certificate."</string>
    <string name="wallet_scanner_flashlight_off">"The flashlight turned off"</string>
    <string name="wallet_scanner_flashlight_hint">"The flashlight"</string>
    <string name="wallet_scanner_info_button">"This is how it works"</string>
    <string name="wallet_scan_again">"Scan again"</string>
    <string name="wallet_add_certificate_button">"Add"</string>
    <string name="wallet_certificate_list_title">"Certificates"</string>
    <string name="wallet_certificate_list_title_loaded">"Certificates, page"</string>
    <string name="delete_button">"Delete"</string>
    <string name="wallet_app_name">"Green Pass"</string>
    <string name="wallet_onboarding_app_header">"Green Pass"</string>
    <string name="wallet_onboarding_app_title">"Green Pass"</string>
    <string name="wallet_onboarding_app_text">"You can use this app to store your EU-compliant Green Pass certificates safely on your smartphone and present them easily."</string>
    <string name="continue_button">"Continue"</string>
    <string name="wallet_onboarding_privacy_header">"Privacy"</string>
    <string name="wallet_onboarding_privacy_title">"The data will remain
in the app"</string>
    <string name="wallet_onboarding_privacy_text">"The certificates are deposited only locally on this smartphone. The data will not be stored in a central system."</string>
    <string name="wallet_onboarding_show_title">"Presenting certificates made easy"</string>
    <string name="wallet_onboarding_show_text1">"Any data shown in the certificate is also included in the EU-compliant QR code."</string>
    <string name="wallet_onboarding_show_text2">"When the certificate is presented, the EU-compliant QR code is scanned using a checking application. In the process, the data included therein will automatically be checked for authenticity and validity."</string>
    <string name="wallet_onboarding_privacy_privacypolicy_title">"Privacy statement"</string>
    <string name="wallet_onboarding_privacy_conditionsofuse_title">"Terms and conditions of use"</string>
    <string name="wallet_onboarding_accept_button">"Accept"</string>
    <string name="language_key">"en"</string>
    <string name="wallet_scanner_howitworks_header">"This is how it works"</string>
    <string name="wallet_scanner_howitworks_header_loaded">"This is how it works, page"</string>
    <string name="wallet_scanner_howitworks_title">"Add
certificates"</string>
    <string name="wallet_download_certificate_list_title">CERTIFICATES</string>
    <string name="wallet_scanner_howitworks_text1">"In order to add a certificate to the app, you need the original certificate on paper or as PDF."</string>
    <string name="wallet_scanner_howitworks_text2">"Tap on «Add» in the app to add a new certificate to the app."</string>
    <string name="wallet_scanner_howitworks_text2_contentdesc">"Step 1: Tap on «Add» in the app to add a new certificate to the app."</string>
    <string name="wallet_scanner_howitworks_text3">"Now hold the camera of your smartphone over the EU-compliant QR code on the certificate to scan it."</string>
    <string name="wallet_scanner_howitworks_text3_contentdesc">"Step 2: Now hold the camera of your smartphone over the EU-compliant QR code on the certificate to scan it."</string>
    <string name="wallet_scanner_howitworks_text4">"A preview of the certificate will appear. Tap on «Add» to store the certificate securely in the app."</string>
    <string name="wallet_scanner_howitworks_text4_contentdesc">"Step 3: A preview of the certificate will appear. Tap on «Add» to store the certificate securely in the app."</string>
    <string name="wallet_scanner_howitworks_question1">"How and where do I get a EU-compliant certificate?"</string>
    <string name="wallet_faq_header">"Frequently Asked Questions"</string>
    <string name="wallet_faq_loaded">"Frequently Asked Questions, Page"</string>
    <string name="wallet_main_loaded">"Green Pass, Page"</string>
    <string name="wallet_scanner_howitworks_answer1">"All Green Pass certificates can be retrieved from gesundheit.gv.at using a mobile phone signature or citizen card."</string>
    <string name="force_update_title">"Update required"</string>
    <string name="force_update_text">"Download the new version of the app."</string>
    <string name="force_update_button">"Update"</string>
    <string name="force_update_grace_period_title">"Update required"</string>
    <string name="force_update_grace_period_text">"Please download the latest version of the app before %s."</string>
    <string name="force_update_grace_period_update_button">"Update"</string>
    <string name="force_update_grace_period_skip_button">"Not now"</string>
    <string name="wallet_certificate_valid_from">"In Austria valid from:
{DATE}"</string>
    <string name="certificate_reason_vaccinated">"Vaccination"</string>
    <string name="certificate_reason_recovered">"Recovery"</string>
    <string name="certificate_reason_tested">"Test"</string>
    <string name="wallet_onboarding_store_header">"Benefits"</string>
    <string name="wallet_onboarding_store_title">"Digital storage of EU-compliant certificates"</string>
    <string name="wallet_onboarding_store_text1">"EU-compliant Green Pass certificates can be added to the app and stored digitally."</string>
    <string name="wallet_onboarding_show_header">"Benefits"</string>
    <string name="accessibility_of_text">" of "</string>
    <string name="accessibility_info_button">"Imprint"</string>
    <string name="accessibility_faq_button">"Frequently Asked Questions"</string>
    <string name="accessibility_list_button">"List of your certificates"</string>
    <string name="accessibility_add_button">"Add certificate"</string>
    <string name="accessibility_close_button">"Close"</string>
    <string name="accessibility_lamp_on_button">"Switch pocket lamp on"</string>
    <string name="accessibility_lamp_off_button">"Switch pocket lamp off"</string>
    <string name="impressum_title">"Imprint"</string>
    <string name="impressum_title_loaded">"Imprint, page"</string>
    <string name="unknown_error">"An unknown error has occurred."</string>
    <string name="wallet_error_valid_from">"In Austria valid from:
{DATE}"</string>
    <string name="wallet_error_national_rules">"The certificate does not comply with statutory requirements."</string>
    <string name="wallet_error_expired">"Certificate
no longer valid"</string>
    <string name="wallet_error_revocation">"Certificate was
revoked"</string>
    <string name="wallet_error_invalid_signature">"Certificate with
invalid signature"</string>
    <string name="wallet_error_invalid_signature_bold">"invalid signature"</string>
    <string name="wallet_error_revocation_bold">"revoked"</string>
    <string name="wallet_error_expired_bold">"expired"</string>
    <string name="wallet_certificate_already_exists">"This EU-compliant certificate has already been stored in the app"</string>
    <string name="wallet_certificate_validity">%s\n%s</string>
    <string name="wallet_certificate_valid_until">"until"</string>
    <string name="wallet_certificate_verifying">"Checking the certificate..."</string>
    <string name="wallet_certificate_verify_success">"Check completed successfully"</string>
    <string name="accessibility_valid_text">"Valid for: "</string>
    <string name="accessibility_invalid_text">"Invalid for: "</string>
    <string name="accessibility_info_box">"Information"</string>
    <string name="accessibility_move_button">"Move"</string>
    <string name="accessibility_notifications">"Notifications"</string>
    <string name="accessibility_state_selector">"Federal State selector"</string>
    <string name="close_button">"Close"</string>
    <string name="wallet_certificate_impfdosis_title">"Vaccine dose"</string>
    <string name="target_disease_name">"Covid-19"</string>
    <string name="wallet_certificate_target_disease_title">"Disease or pathogen"</string>
    <string name="wallet_certificate_impfstoff_product_name_title">"Product"</string>
    <string name="wallet_certificate_impfstoff_holder">"Manufacturer"</string>
    <string name="wallet_certificate_vaccination_date_title">"Date of vaccination"</string>
    <string name="wallet_certificate_vaccination_country_title">"Country of vaccination"</string>
    <string name="wallet_certificate_vaccination_issuer_title">"Publisher"</string>
    <string name="covid_certificate_recovery_title">"Recovery"</string>
    <string name="wallet_certificate_recovery_first_positiv_result">"Date of first positive result"</string>
    <string name="wallet_certificate_recovery_from">"Valid from"</string>
    <string name="wallet_certificate_recovery_until">"Valid until"</string>
    <string name="wallet_certificate_test_land">"Testing country"</string>
    <string name="covid_certificate_test_title">"Test"</string>
    <string name="wallet_certificate_test_result_title">"Result"</string>
    <string name="wallet_certificate_test_result_negativ">"No evidence (negative)"</string>
    <string name="cancel_button">"Cancel"</string>
    <string name="settings_title">"About the app"</string>
    <string name="settings_row_imprint">"Imprint"</string>
    <string name="settings_row_licenses">"Licenses"</string>
    <string name="settings_row_faqs">"Frequently Asked Questions"</string>
    <string name="settings_row_update_data">"Update entry rules"</string>
    <string name="settings_row_campaign_notifications_title">"Notifications"</string>
    <string name="settings_row_campaign_notifications_message">"You will occasionally receive important notifications that contain information relevant to you, such as reminders about booster vaccinations, changes to the current COVID-19 measures or similar."</string>
    <string name="settings_row_campaign_notifications_toggle_label">"Show Notifications"</string>
    <string name="directlink_datepicker_title">Add certificate</string>
    <string name="directlink_datepicker_message">Please enter your date of birth to receive your certificate.</string>
    <string name="directlink_datepicker_button_retrieve">Retrieve certificate</string>
</resources>